--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 		<form th:object="${passwordConfigForm}" method="POST">
 			<div>
 				<label for="length">Length:</label>
-				<input type="number" th:field="*{length}" id="length" value=12 min="1" max="35" />
+				<input type="number" th:field="*{length}" id="length" min="1" max="35" />
 			</div>
 			<div>
 				<input type="checkbox" name="hasUpperChars"
