--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <div class="wrapper">
 	<div class="content">
 		<h1>Pass Generator</h1>
-		<form th:object="${passwordConfigForm}" method="POST">
+		<form th:action="@{/}" th:object="${passwordConfigForm}" method="POST">
 			<div>
 				<label for="length">Length:</label>
 				<input type="number" th:field="*{length}" id="length" min="1" max="35" />
@@ -34,7 +34,8 @@
 					   th:checked="*{hasSymbols()}"/>
 				<label for="useSymbols">Use symbols</label>
 			</div>
-			<button type="submit">Generate</button>
+			<button type="submit">Generate
+			</button>
 		</form>
 		<div th:if="${password}">
 			<p>Password: </p>
